offload logic to my-quaint and my-engage packages

--- a/package.json
+++ b/package.json
@@ -3,18 +3,13 @@
   "version": "0.0.0",
   "description": "My blog.",
   "dependencies": {
-    "autoprefixer": "^5.2.0",
-    "autoprefixer-core": "^5.2.1",
     "earlgrey": ">= 0.0.1",
     "earlgrey-runtime": ">= 0.0.3",
     "engage": ">= 0.0.0",
-    "highlight.js": "^8.5.0",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "node-sass": "^3.2.0",
-    "postcss": "^5.0.2",
-    "quaint": ">= 0.0.2",
-    "quaint-earlgrey": ">= 0.0.0"
+    "my-quaint": ">= 0.0.0",
+    "urlencode": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
