--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.0",
   "description": "My blog.",
   "dependencies": {
-    "earlgrey": ">= 0.0.1",
-    "earlgrey-runtime": ">= 0.0.3",
-    "engage": ">= 0.0.0",
+    "earlgrey": ">= 0.0.12",
+    "earlgrey-runtime": ">= 0.0.11",
     "gulp": "^3.9.0",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "my-quaint": ">= 0.0.0",
+    "@breuleux/engage-config": ">= 0.0.2",
     "node-static": "^0.7.7",
     "urlencode": "^1.1.0"
   },
